# bedworks

./: CMakeLists.txt  LICENSE  README.md  submission-action.md  submission-lights-camera.md
resources/models/blue_planet/: scene.gltf
resources/models/devil_hawk/: license.txt  scene.gltf
resources/models/mother_spaceship/: license.txt  scene.gltf
resources/models/spaceship/: scene.gltf
resources/models/tie/: scene.gltf
resources/models/viper/: viper.gltf
resources/models/yf_19/: license.txt  scene.gltf
resources/shaders/: framebuffer.frag  framebuffer.vert  instancing.vert  model.frag  model.vert  phong.frag  phong.vert  skybox.frag  skybox.vert  spaceship.vert
scenefiles/lights-camera/required/: table.json  unit_cube_scale.json  unit_cube_translate_x.json  unit_cube_translate_y.json  unit_cube_translate_z.json
src/: glad.c  mainwindow.cpp  realtime.cpp  realtime.h
src/camera/: camera.cpp  camera.h
src/meshes/: mesh.cpp  mesh.h  model.cpp  model.h  skybox.cpp  skybox.h  texture.cpp  texture.h
src/noise/: fastnoise.cpp  fastnoise.h
src/primitives/: cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  primitive.cpp  primitive.h  sphere.cpp  sphere.h
src/utils/: debug.h  ebo.cpp  ebo.h  model.h  scenedata.h  sceneparser.cpp  sceneparser.h  shader.cpp  shader.h  vao.cpp  vao.h  vbo.cpp  vbo.h
